tests/fixtures/invalid/pow_float_int_bool.py
# Cannot call pow() with Float, Int, Bool
x = pow(1.0, 1, True)
